k8s-manifests/python-api-manifests/web-ns.yaml
#namespace for api stuff to live in
kind: Namespace
apiVersion: v1
metadata:
  name: web
