k8s-manifests/python-api-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-api-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: api.com
    http:
      paths:
      - pathType: Prefix
        path: "/count"
        backend:
          service:
            name: python-api
            port:
              number: 5000
